# Omen

./: README.md  pyproject.toml
src/Omen/: main.py
src/Omen.egg-info/: PKG-INFO  SOURCES.txt
