[project]
name = "Omen"
version = "0.0.1"
authors = [
  { name="Aslan" },
]
description = "Generates CL string for copmiling c/cc projects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/As14n/Omen/tree/main"